[FIX] sap.uxap.ObjectPageSubSection: remove redundant padding
Problem: Text of some forms is connected to their container which
looks bad.

Solution: Removed redundant padding for compact size from base file.

Fixes: https://github.com/UI5/openui5/issues/4444
SNOW: DINC0905243

--- a/src/sap.uxap/src/sap/uxap/themes/base/ObjectPageSubSection.less
+++ b/src/sap.uxap/src/sap/uxap/themes/base/ObjectPageSubSection.less
@@ -224,14 +224,6 @@ Doing so will result in less generated CSS, as well as less future maintanance i
 	}
 }
 
-/* compact size */
-.sapUiSizeCompact {
-	.sapUxAPObjectPageLayout-Std-Phone .sapUxAPBlockContainer .sapUiFormResGrid > div,
-	.sapUxAPObjectPageLayout-Std-Phone .sapUxAPBlockContainer .sapUiFormCLContainer {
-		padding: 1rem 0;
-	}
-}
-
 /* Styles needed for wrapTitle property */
 .sapUxAPObjectPageSubSection .sapUxAPObjectPageSubSectionHeader .sapUxAPObjectPageSubSectionTitle {
 	height: auto;
